sad day for brianshouse.uk

--- a/views/waiting.pug
+++ b/views/waiting.pug
@@ -58,5 +58,5 @@ html(lang='en')
         color: #f00;
       }
   body
-    h1 Waiting Page
-    p Please wait while we setup this page!
+    h1 Sorry, but this domain is not available
+    p Ted told me to take it down, so I did.
